--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <link rel="stylesheet" href="styles/styles.css">
+  <head>    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Caio de Miranda Souza | WDD 130</title>
+    <meta name="description" content="Caio's WDD130 homepage. Learning HTML and CSS.">
+    <meta name="author" content="Caio de Miranda Souza">
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header>
@@ -19,6 +21,11 @@
       <img src="images/IMG_0518.jpg" alt="Hello, my name is Caio de Miranda Souza" width="200">
       <p>Hello! My name is Caio de Miranda Souza and I'm from Curitiba, Brazil! I enjoy spending time with my family and friends!</p>
     </main>
+    <aside>
+      <h2>Brazil</h2>
+      <img src="images/brazil.jpg" alt="Beautiful beach in Brazil">
+      <p>A beautiful country with awesome people.</p>
+    </aside>
     <footer>
       <p>©2024 📸 Caio de Miranda Souza 📸 Curitiba, Brazil</p>
     </footer>
