--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -24,10 +24,10 @@
     <img src="images/logo.png" alt="Rafting Site Logo">
     <h2>Style Guide</h2>
     <h3>Color Palette</h3>
-    <li>primary-color: #416165</li>
-    <li>secondary-color: #9B7E46</li>
-    <li>accent1-color: #0B3948</li>
-    <li>accent2-color: #43281C</li>
+    <h4>primary-color: #416165</h4>
+    <h4>secondary-color: #9B7E46</h4>
+    <h4>accent1-color: #0B3948</h4>
+    <h4>accent2-color: #43281C</h4>
     <p>Palette URL:</p>
     <a href="https://coolors.co/88d498-43281c-416165-9b7e46-0b3948" target="_blank">https://coolors.co/88d498-43281c-416165-9b7e46-0b3948</a>
     <h3>Typography</h3>
