--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <meta name="description" content="Page created to help customers know more about our history.">
+  <meta name="author" content="Caio de Miranda Souza">
   <link rel="stylesheet" href="styles/site-plan-rafting.css">
 </head>
 <body>
