--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
         <a href="https://www.facebook.com/caiero">My Facebook Profile</a>
       </nav>
     </header>
-    <main>
-      <h1>Caio de Miranda Souza | WDD 130</h1>
-      <img src="images/IMG_0518.jpg" alt="Hello, my name is Caio de Miranda Souza" width="200">
-      <p>Hello! My name is Caio de Miranda Souza and I'm from Curitiba, Brazil! I enjoy spending time with my family and friends! I served as a full-time missionary for The Church of Jesus Christ of Latter Day Saints in Lisbon, Portugal. It was a great opportunity where I could know the Savior's love through miracles everyday. That experience has shaped my life and made me a better person. Now I've been married for 5 years and life is way easier because of the things I learned during my missionary work.</p>
-      <ul class="box">
-        <li><a href="https://www.churchofjesuschrist.org/temples/details/provo-city-center-temple?lang=eng" target="_blank">Provo City Center Temple</a></li>
-        <li><a href="https://www.churchofjesuschrist.org/temples/details/curitiba-brazil-temple?lang=eng" target="_blank">Curitiba Brazil Temple</a></li>
-        <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng" target="_blank">Salt Lake Temple</a></li>
-      </ul>
-    </main>
-    <aside class="box">
-      <h2>Brazil</h2>
-      <img src="images/brazil.jpg" alt="Beautiful beach in Brazil">
-      <p>A beautiful country with awesome people.</p>
-    </aside>
+    <div class="grid">
+      <main>
+        <h1>Caio de Miranda Souza | WDD 130</h1>
+        <img src="images/IMG_0518.jpg" alt="Hello, my name is Caio de Miranda Souza" width="200">
+        <p>Hello! My name is Caio de Miranda Souza and I'm from Curitiba, Brazil! I enjoy spending time with my family and friends! I served as a full-time missionary for The Church of Jesus Christ of Latter Day Saints in Lisbon, Portugal. It was a great opportunity where I could know the Savior's love through miracles everyday. That experience has shaped my life and made me a better person. Now I've been married for 5 years and life is way easier because of the things I learned during my missionary work.</p>
+        <ul class="box">
+          <li><a href="https://www.churchofjesuschrist.org/temples/details/provo-city-center-temple?lang=eng" target="_blank">Provo City Center Temple</a></li>
+          <li><a href="https://www.churchofjesuschrist.org/temples/details/curitiba-brazil-temple?lang=eng" target="_blank">Curitiba Brazil Temple</a></li>
+          <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng" target="_blank">Salt Lake Temple</a></li>
+        </ul>
+      </main>
+      <aside class="box">
+        <h2>Brazil</h2>
+        <img src="images/brazil.jpg" alt="Beautiful beach in Brazil">
+        <p>A beautiful country with awesome people.</p>
+      </aside>
+    </div>
     <footer>
       <p>©2024 📸 Caio de Miranda Souza 📸 Curitiba, Brazil</p>
     </footer>
