--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
   <title>Document</title>
   <meta name="description" content="Page created to help customers know more about our history.">
   <meta name="author" content="Caio de Miranda Souza">
-  <link rel="stylesheet" href="styles/site-plan-rafting.css">
+  <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
   <header>
@@ -24,7 +24,7 @@
       <h1>Great Adventure Rafting</h1>
       <article>
         <img src="images/happycustomer.jpg" alt="Happy Costumer">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem, saepe.</p>
+        <p>Lorem ipsum dolor sit amet consectetur quincidunt eos laudanmollitia, voluptatibus quas. Pariatur ea debitis suscipit, harum, modi fugit cum omnis aut et commodi alias in! Ducimus consequatur laudantium aliquid rerum repellat ullam hic doloremque animi temporibus omnis quis fugit pariatur maiores, ab nemo! Doloribus vero ullam dolore, distinctio inventore laudantium praesentium, asperiores maiores nihil porro similique.</p>
       </article>
     </div>
     <section>
