--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </aside>
     </div>
     <footer>
-      <p>©2024 📸 Caio de Miranda Souza 📸 Curitiba, Brazil</p>
+      <p>©2024 📸 Caio de Miranda Souza 📸 Curitiba, Brazi</p>
     </footer>
   </body> 
   <!-- 01/24/2024 -->
