--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,10 +12,10 @@
   <header>
     <img src="images/logo.png" alt="Rafting Site Logo">
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Us</a>
-      <a href="trips.html">Trips</a>
-      <a href="contact.html">Contact Us</a>
+      <a href="index.html" class="button">Home</a>
+      <a href="about.html" class="button">About Us</a>
+      <a href="trips.html" class="button">Trips</a>
+      <a href="contact.html" class="button">Contact Us</a>
     </nav>
   </header>
   <main>
@@ -33,11 +33,28 @@
     </section>  
     <section>
       <h2>Adventure Awaits You!</h2>
-      <img src="images/rafting1.jpg" alt="Clients Rafting 1">
-      <img src="images/rafting2.jpg" alt="Clients Rafting 2">
-      <img src="images/rafting3.jpg" alt="Clients Rafting 3">
-      <img src="images/rafting4.jpg" alt="Clients Rafting 4">
-      <img src="images/rafting5.jpg" alt="Clients Rafting 5">
+      <div class="figures">
+        <figure>
+          <img src="images/rafting1.jpg" alt="Clients Rafting 1">
+          <figcaption>Awesome Places</figcaption>
+        </figure>
+        <figure>
+          <img src="images/rafting2.jpg" alt="Clients Rafting 2">
+          <figcaption>Breathtaking Adventures</figcaption>
+        </figure>
+        <figure>
+          <img src="images/rafting3.jpg" alt="Clients Rafting 3">
+          <figcaption>Connect with Nature</figcaption>
+        </figure>
+        <figure>
+          <img src="images/rafting4.jpg" alt="Clients Rafting 4">
+          <figcaption>Family-Friendly</figcaption>
+        </figure>
+        <figure>
+          <img src="images/rafting5.jpg" alt="Clients Rafting 5">
+          <figcaption>Team Work</figcaption>
+        </figure>
+      </div>
     </section>
   </main>
   <footer>
