--- a/wwr/about.html
+++ b/wwr/about.html
@@ -58,7 +58,7 @@
     </section>
   </main>
   <footer>
-    <p>&copy; 2024 - Great Adventure Rafting | Caio de Miranda Souz</p>
+    <p>&copy; 2024 - Great Adventure Rafting | Caio de Miranda Souza</p>
     <nav class="sociallinks">
       <a href="https://facebook.com">
         <img src="images/facebook.png" alt="Facebook">
