--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us</title>
+  <title>Great Adventure Rafting | About Us</title>
   <meta name="description" content="Page created to help customers know more about our history.">
   <meta name="author" content="Caio de Miranda Souza">
   <link rel="stylesheet" href="styles/rafting.css">
