--- a/quiz.html
+++ b/quiz.html
@@ -27,7 +27,7 @@
       <div class="question">
         <label for="q3">3. What does the "C" in CSS stand for?
           <select id="q3" name="q3" required>
-            <option value="" selected disabled>Choose One ..</option>
+            <option value="" selected disabled>Choose One...</option>
             <option value="cascading">Cascading</option>
             <option value="style">Style</option>
             <option value="sheet">Sheet</option>
