--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -19,7 +19,7 @@
     </nav>
   </header>
   <main>
-    <h2 class="title">Contact Us</h2>
+    <h1 class="title">Contact Us</h1>
     <h3>We love questions and feedback – and we're always happy to help! Here are some ways to contact us.</h3>
     <div class="grid-display">
       <div class="card">
@@ -57,21 +57,21 @@
             <input type="email" id="email" name="email" required>
           </div>
           <div class="form-group-radio">
-            <label>
-              <input type="radio" name="purpose" value="General Inquiry" required>
+            <label for="general_inquiry">
+              <input type="radio" id="general_inquiry" name="purpose" value="General Inquiry" required>
               General Inquiry
             </label>
           </div>
           <div class="form">
             <div class="form-group-radio">
-              <label>
-                <input type="radio" name="purpose" value="Reservation Question" required>
+              <label for="reservation_question">
+                <input type="radio" id="reservation_question" name="purpose" value="Reservation Question" required>
                 Reservation Question
               </label>
             </div>
             <div class="form-group-radio">
-              <label>
-                <input type="radio" name="purpose" value="Website Suggestion" required>
+              <label for="website_suggestion">
+                <input type="radio" id="website_suggestion" name="purpose" value="Website Suggestion" required>
                 Website Suggestion
               </label>
             </div>
@@ -81,8 +81,8 @@
             <textarea id="message" name="message" rows="5" required></textarea>
           </div>
           <div class="form-group-checkbox">
-            <label>
-              <input type="checkbox" name="newsletter">
+            <label for="newsletter">
+              <input type="checkbox" id="newsletter" name="newsletter">
               Please subscribe me to the monthly newsletter
             </label>
           </div>
