--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -37,7 +37,7 @@
         </div>
       </div>   
       <div class="card">
-        <img src="/images/raft.jpg" alt="Avatar">
+        <img src="/images/raftin.jpg" alt="Avatar">
         <div class="container">
           <h4><b>Customer Support</b></h4>
           <p>📧 support@greatadventure.com</p>
