--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -23,7 +23,7 @@
     <h3>We love questions and feedback – and we're always happy to help! Here are some ways to contact us.</h3>
     <div class="grid-display">
       <div class="card">
-        <img src="/images/Happy-Rafter.webp" alt="sales-department">
+        <img src="images/Happy-Rafter.webp" alt="sales-department">
         <div class="container">
           <h4><b>Sales Department</b></h4>
           <p>🕿 +55 41 98825-4504</p>
@@ -37,7 +37,7 @@
         </div>
       </div>   
       <div class="card">
-        <img src="/images/raftin.jpg" alt="customer-support">
+        <img src="images/raftin.jpg" alt="customer-support">
         <div class="container">
           <h4><b>Customer Support</b></h4>
           <p>📧 support@greatadventure.com</p>
@@ -90,7 +90,7 @@
         </form>
       </div>
       <div class="image-container">
-        <img src="/images/c.jpg" alt="Rafting Picture">
+        <img src="images/c.jpg" alt="Rafting Picture">
       </div>
     </div>
     </main>
