--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -23,7 +23,7 @@
     <h3>Here is a list of the trips you can take with us. Amazing options for you and your family!</h3>
     <div class="grid-display">
       <div class="card">
-        <img src="images/Happy-Rafter.webp" alt="sales-department">
+        <img src="images/loren-dosti-M8cpBt6RSns-unsplash.jpg" alt="rapids-rush-adventure">
         <div class="container">
           <h4><b>Rapids Rush Adventure</b></h4>
           <h5> Embark on a thrilling journey through roaring rapids and scenic landscapes. This adrenaline-pumping adventure takes you through challenging rapids, tranquil stretches, and picturesque canyons. Suitable for both beginners and experienced rafters, Rapids Rush Adventure promises an unforgettable experience in the heart of nature.</h5>
@@ -31,7 +31,7 @@
         <a href="contact.html"><button type="button"><b>Book Now</b></button></a>
       </div> 
       <div class="card">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d446.35098597888765!2d-49.07895997007686!3d-26.49412976679256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1708465167639!5m2!1spt-BR!2sbr" height="250" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <img src="images/jackalope-west-02HBQ2w_yak-unsplash (1).jpg" alt="wilderness-expedition">
         <div class="container">
           <h4><b>Wilderness Expedition</b></h4>
           <h5>Dive into the heart of wilderness on this immersive rafting expedition. Over the course of five days, you'll navigate through remote rivers, camp under the stars, and explore untouched landscapes. Led by experienced guides, Wilderness Expedition offers a perfect blend of excitement, exploration, and relaxation amidst pristine natural beauty.</h5>
@@ -39,7 +39,7 @@
         <a href="contact.html"><button type="button"><b>Book Now</b></button></a>  
       </div>       
       <div class="card">
-        <img src="images/raftin.jpg" alt="customer-support">
+        <img src="images/vince-fleming-bb2iXgjGpVg-unsplash.jpg" alt="family-fun-float">
         <div class="container">
           <h4><b>Family Fun Float</b></h4>
           <h5>Create lasting memories with your family on this fun-filled rafting trip. Designed for families with children, Family Fun Float offers gentle rapids, calm waters, and stunning scenery. Spend quality time together while floating down the river, enjoying picnics on the riverbank, and bonding over campfire stories under the starlit sky.</h5>
@@ -49,7 +49,7 @@
     </div>  
     <div class="grid-display">
       <div class="card">
-        <img src="images/Happy-Rafter.webp" alt="sales-department">
+        <img src="images/firdouss-ross-THsw2pd2gX0-unsplash.jpg" alt="extreme-rapids-challenge">
         <div class="container">
           <h4><b>Extreme Rapids Challenge</b></h4>
           <h5>Calling all thrill-seekers! Prepare for the ultimate adrenaline rush on the Extreme Rapids Challenge. This seven-day expedition takes you through some of the most challenging and exhilarating rapids in the region. Conquer raging waters, navigate through rugged terrain, and push your limits on this epic rafting adventure of a lifetime.</h5>
@@ -57,7 +57,7 @@
         <a href="contact.html"><button type="button"><b>Book Now</b></button></a>
       </div> 
       <div class="card">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d446.35098597888765!2d-49.07895997007686!3d-26.49412976679256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1708465167639!5m2!1spt-BR!2sbr" height="250" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <img src="images/rafting3.jpg" alt="sunset-serenity-tour">
         <div class="container">
           <h4><b>Sunset Serenity Tour</b></h4>
           <h5>Experience the magic of rafting at sunset on this serene evening tour. Escape the hustle and bustle of the city as you drift along calm waters, basking in the golden glow of the setting sun. Sunset Serenity Tour offers a peaceful and rejuvenating escape, perfect for those seeking relaxation and tranquility amidst nature's beauty.</h5>
@@ -65,7 +65,7 @@
         <a href="contact.html"><button type="button"><b>Book Now</b></button></a>
       </div>   
       <div class="card">
-        <img src="images/raftin.jpg" alt="customer-support">
+        <img src="images/herve-p4IqmiUJTcI-unsplash.jpg" alt="weekend-wilderness-retreat">
         <div class="container">
           <h4><b>Weekend Wilderness Retreat</b></h4>
           <h5>Unwind and recharge with a weekend wilderness retreat that combines rafting, camping, and outdoor adventure. Spend two days exploring scenic rivers, hiking through lush forests, and camping beneath starlit skies. Whether you're seeking adventure or relaxation, Weekend Wilderness Retreat offers the perfect opportunity to reconnect with nature and recharge your spirit.</h5>
