--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,16 +12,16 @@
   <header>
     <img src="images/logo.png" alt="Rafting Site Logo">
     <nav>
-      <a href="index.html" class="button">Home</a>
-      <a href="about.html" class="button">About Us</a>
-      <a href="trips.html" class="button">Trips</a>
-      <a href="contact.html" class="button">Contact Us</a>
+      <a href="index.html" class="button"><b>Home</b></a>
+      <a href="about.html" class="button"><b>About Us</b></a>
+      <a href="trips.html" class="button"><b>Trips</b></a>
+      <a href="contact.html" class="button"><b>Contact Us</b></a>
     </nav>
   </header>
   <main>
     <div class="hero">
       <img src="images/divbg.jpg" alt="Rafting Action">
-      <h1>Great Adventure Rafting</h1>
+      <h1>About Us</h1>
       <article>
         <img src="images/happycustomer.jpg" alt="Happy Costumer">
         <p>Lorem ipsum dolor sit amet consectetur quincidunt eos laudanmollitia, voluptatibus quas. Pariatur ea debitis suscipit, harum, modi fugit cum omnis aut et commodi alias in! Ducimus consequatur laudantium aliquid rerum repellat ullam hic doloremque animi temporibus omnis quis fugit pariatur maiores, ab nemo! Doloribus vero ullam dolore, distinctio inventore laudantium praesentium, asperiores maiores nihil porro similique.</p>
