--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -72,54 +72,56 @@
         </div>
         <a href="contact.html"><button type="button"><b>Book Now</b></button></a>
       </div>
-    </div>  
-    <div class="contact-container">
-      <div class="form-container">
-        <h2>Send us a message!</h2>
-        <form action="#" method="post">
-          <div class="form-group">
-            <label for="name">Your Name:</label>
-            <input type="text" id="name" name="name" required>
-          </div>
-          <div class="form-group">
-            <label for="email">Your Email:</label>
-            <input type="email" id="email" name="email" required>
-          </div>
-          <div class="form-group-radio">
-            <label for="general_inquiry">
-              <input type="radio" id="general_inquiry" name="purpose" value="General Inquiry" required>
-              General Inquiry
-            </label>
-          </div>
-          <div class="form">
-            <div class="form-group-radio">
-              <label for="reservation_question">
-                <input type="radio" id="reservation_question" name="purpose" value="Reservation Question" required>
-                Reservation Question
-              </label>
+    </div> 
+    <div class="container-signup"> 
+      <div class="contact-container2">
+        <div class="form-container">
+          <h2>Send us a message!</h2>
+          <form action="#" method="post">
+            <div class="form-group">
+              <label for="name">Your Name:</label>
+              <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+              <label for="email">Your Email:</label>
+              <input type="email" id="email" name="email" required>
             </div>
             <div class="form-group-radio">
-              <label for="website_suggestion">
-                <input type="radio" id="website_suggestion" name="purpose" value="Website Suggestion" required>
-                Website Suggestion
+              <label for="general_inquiry">
+                <input type="radio" id="general_inquiry" name="purpose" value="General Inquiry" required>
+                General Inquiry
               </label>
             </div>
-          </div>
-          <div class="form-group">
-            <label for="message">Your Message:</label>
-            <textarea id="message" name="message" rows="5" required></textarea>
-          </div>
-          <div class="form-group-checkbox">
-            <label for="newsletter">
-              <input type="checkbox" id="newsletter" name="newsletter">
-              Please subscribe me to the monthly newsletter
-            </label>
-          </div>
-          <button type="submit"><b>Send Message</b></button>
-        </form>
-      </div>
-      <div class="image-container">
-        <img src="images/c.jpg" alt="Rafting Picture">
+            <div class="form">
+              <div class="form-group-radio">
+                <label for="reservation_question">
+                  <input type="radio" id="reservation_question" name="purpose" value="Reservation Question" required>
+                  Reservation Question
+                </label>
+              </div>
+              <div class="form-group-radio">
+                <label for="website_suggestion">
+                  <input type="radio" id="website_suggestion" name="purpose" value="Website Suggestion" required>
+                  Website Suggestion
+                </label>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="message">Your Message:</label>
+              <textarea id="message" name="message" rows="5" required></textarea>
+            </div>
+            <div class="form-group-checkbox">
+              <label for="newsletter">
+                <input type="checkbox" id="newsletter" name="newsletter">
+                Please subscribe me to the monthly newsletter
+              </label>
+            </div>
+            <button type="submit"><b>Send Message</b></button>
+          </form>
+        </div>
+        <div class="image-container2">
+          <img src="images/c.jpg" alt="Rafting Picture">
+        </div>
       </div>
     </div>
     </main>
